# solana-breeding

./: .gitignore  Anchor.toml  README.md  child.json  constants.ts  nftMetadata.json  package.json  rarity.json  utils.ts
programs/solcraft-breeding/: Cargo.toml
programs/solcraft-breeding/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
programs/solcraft-breeding/src/instructions/: mod.rs
programs/solcraft-breeding/src/instructions/breed/: breed.rs  context.rs
programs/solcraft-breeding/src/instructions/initialize_pig_machine/: initialize_pig_machine.rs
programs/solcraft-breeding/src/instructions/initialize_runes/: context.rs  initialize_runes.rs  mod.rs
programs/solcraft-breeding/src/instructions/mint_tokens/: context.rs  mint_tokens.rs
programs/solcraft-breeding/src/instructions/stake/: context.rs  mod.rs  stake.rs
programs/solcraft-breeding/src/instructions/unstake/: context.rs  unstake.rs
programs/solcraft-program/: Cargo.toml
programs/solcraft-program/src/: error.rs  lib.rs  state.rs
programs/solcraft-program/src/instructions/: mod.rs
programs/solcraft-program/src/instructions/after_stake/: after_stake.rs  context.rs  mod.rs
programs/solcraft-program/src/instructions/approve/: approve.rs  context.rs  mod.rs
programs/solcraft-program/src/instructions/breed/: breed.rs  context.rs  mod.rs
programs/solcraft-program/src/instructions/initialize_pig_machine/: context.rs  initialize_pig_machine.rs  mod.rs
programs/solcraft-program/src/instructions/initialize_runes/: context.rs
programs/solcraft-program/src/instructions/mint_tokens/: mint_tokens.rs  mod.rs
programs/solcraft-program/src/instructions/stake/: context.rs  stake.rs
programs/solcraft-program/src/instructions/unstake/: context.rs  mod.rs  unstake.rs
scripts/: initializeCandyMachine.ts  (+2 more)
(+12 files in other folders)
