[package]
name = "solcraft_breeding"
version = "0.0.1"
description = "Program for breeding pigs of SolCraft"
authors = ["Gabriel Costa <gabrielgcr45@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcraft_breeding"

[features]
no-entrypoint = []

[dependencies]
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
