[package]
name = "solcraft_program"
version = "0.0.1"
description = "Official program ol Solcraft"
authors = ["Gabriel Costa <gabrielgcr45@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcraft_program"

[features]
no-entrypoint = []

[dependencies]
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
anchor-lang = { version = "0.24.2" }
anchor-spl = "0.24.2"
